cloudflare nextjs code

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "pages:build": "pnpm next-on-pages",
+    "preview": "pnpm pages:build && wrangler pages dev",
+    "deploy": "pnpm pages:build && wrangler pages deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/lib/db/migrate.ts",
     "db:drop": "drizzle-kit drop",
@@ -43,6 +47,12 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.16.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@cloudflare/next-on-pages": "1",
+    "@cloudflare/workers-types": "^4.20240725.0",
+    "autoprefixer": "^10.0.1",
+    "eslint-plugin-next-on-pages": "^1.13.0",
+    "vercel": "^35.2.1",
+    "wrangler": "^3.67.1"
   }
 }
