--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,11 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
-    "target": "esnext",
-    "baseUrl": "./"
+    "types": [
+        "@cloudflare/workers-types/2023-07-01"
+    ]
   },
   "include": [
     "next-env.d.ts",
